spacing issues in tablet

--- a/src/stylesheet/main.css
+++ b/src/stylesheet/main.css
@@ -478,6 +478,9 @@ body {
       .Header .title {
         height: auto;
         transform: translateY(10px); } }
+    @media (min-width: 768px) and (max-width: 800px) {
+      .Header .title {
+        align-items: self-start !important; } }
     .Header .title .logo-svg svg {
       width: 700px; }
       @media (max-width: 768px) {
@@ -490,6 +493,18 @@ body {
   text-transform: capitalize;
   transform: translateY(-7px);
   letter-spacing: 0.5px; }
+  @media (min-width: 768px) and (max-width: 990px) {
+    .header-tagline {
+      font-size: 0.9rem;
+      transform: translateY(0px); } }
+  @media (min-width: 768px) and (max-width: 800px) {
+    .header-tagline {
+      font-size: 0.9rem;
+      transform: translateY(10px) !important; } }
+  @media (min-width: 768px) and (max-width: 990px) {
+    .header-tagline {
+      font-size: 0.9rem;
+      transform: translateY(0px); } }
   @media (max-width: 768px) {
     .header-tagline {
       font-size: 12px;
@@ -504,6 +519,9 @@ body {
   color: white;
   font-weight: 700;
   opacity: 0.85; }
+  @media (min-width: 768px) and (max-width: 990px) {
+    .title-line {
+      font-size: 3rem; } }
   @media (max-width: 768px) {
     .title-line {
       display: none; } }
@@ -682,6 +700,9 @@ body {
           width: 50%;
           color: #101754;
           font-family: 'maven-200', serif; }
+          @media (min-width: 768px) and (max-width: 990px) {
+            .Navigation .bottom .controls .control p {
+              display: none; } }
           @media (max-width: 768px) {
             .Navigation .bottom .controls .control p {
               font-size: 1rem; } }
@@ -699,6 +720,9 @@ body {
   max-width: 150px;
   width: 100%;
   height: 40px; }
+  @media (max-width: 990px) {
+    .debt-card-national {
+      max-width: 100px; } }
   @media (max-width: 768px) {
     .debt-card-national {
       height: 30px;
@@ -792,6 +816,9 @@ body {
     min-width: 150px;
     display: flex;
     justify-content: center; }
+    @media (max-width: 990px) {
+      .column-titles .column-debt .block {
+        min-width: 100px; } }
     @media (max-width: 768px) {
       .column-titles .column-debt .block {
         min-width: 100px;
@@ -914,6 +941,9 @@ body {
   color: white;
   font-family: 'maven-300', serif;
   font-size: 1.2rem !important; }
+  @media (min-width: 768px) and (max-width: 990px) {
+    .c-t-m {
+      font-size: 1rem !important; } }
 
 .CountryItem {
   height: 75px;
