--- a/src/ui/components/custom/Social/Social.scss
+++ b/src/ui/components/custom/Social/Social.scss
@@ -89,4 +89,8 @@
   @include maven300;
   font-size: 1.2rem !important;
   // @include font-lemonmilk
+
+  @media(min-width: $mobilebreak) and (max-width: 990px) {
+    font-size: 1rem !important;
+  }
 }
